force-app/main/default/objects/Account/fields/account_status__c.field-meta.xml
<CustomField>
    <fullName>account_status__c</fullName>
    <label>account status</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>