force-app/main/default/objects/Account/fields/flower_type__c.field-meta.xml
<CustomField>
    <fullName>flower_type__c</fullName>
    <label>flower_type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>