force-app/main/default/objects/Account/fields/orders__c.field-meta.xml
<CustomField>
    <fullName>orders__c</fullName>
    <label>orders</label>
    <length>12</length>
    <type>Text</type>
</CustomField>