force-app/main/default/objects/Account/fields/plant_type__c.field-meta.xml
<CustomField>
    <fullName>plant_type__c</fullName>
    <label>plant_type</label>
    <length>44</length>
    <type>Text</type>
</CustomField>